@@ -1,5 +1,12 @@
 2009-04-25  Joseph Myers  <joseph@codesourcery.com>
 
+	* gcc.dg/enum-const-1.c, gcc.dg/enum-const-2.c,
+	gcc.dg/enum-const-3.c: New tests.
+	* gcc.dg/gnu89-const-expr-1.c, gcc.dg/gnu99-const-expr-1.c: Use
+	-pedantic-errors.  Update expected diagnostics.
+
+2009-04-25  Joseph Myers  <joseph@codesourcery.com>
+
 	PR c/39582
 	* gcc.dg/vla-20.c: New test.
 
